normalize responses as single/array for teams. Add more hasMany relationships to team and soccer season and

--- a/app/templates/soccerseason.hbs
+++ b/app/templates/soccerseason.hbs
@@ -4,9 +4,9 @@
 
 <h2>{{ model.caption }}</h2>
 
-<h1>Fixtures:</h1>
+<h1>Teams:</h1>
 <ul>
-  {{#each model.fixtures as |fixture|}}
-    <li>{{fixture.homeTeam.name}} vs {{fixture.awayTeam.name}}</li>
+  {{#each model.teams as |team|}}
+    <li>{{team.name}}</li>
   {{/each}}
 </ul>
