--- a/app/templates/soccerseason.hbs
+++ b/app/templates/soccerseason.hbs
@@ -10,3 +10,13 @@
     <li>{{team.name}}</li>
   {{/each}}
 </ul>
+
+<h1>League Table</h1>
+<ul>
+  {{#each model.leagueTable.standing as |standing|}}
+    <li>
+      <img src={{standing.crestURI}} height=20 width=20>
+      <span>{{standing.rank}} - {{standing.team}} - {{standing.points}}</span>
+    </li>
+  {{/each}}
+</ul>
